--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span class="logo">Web</span>Studio</a>
         <ul>
           <li><a href="/studio">Studio</a></li>
           <li><a href="/portfolio">Portfolio</a></li>
@@ -140,7 +141,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span class="logo">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
