--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolia</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -11,7 +16,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/studio">Studio</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="/contact">Contacts</a></li>
         </ul>
       </nav>
