--- a/index.html
+++ b/index.html
@@ -13,31 +13,45 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="">
-        <a href="./index.html" class="logo-link"
-          ><span class="logo">Web</span>Studio</a
-        >
-        <ul class="navigation">
-          <li><a href="/studio">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="/contact">Contacts</a></li>
+    <!-- Header -->
+    <header class="page-header">
+      <nav class="page-nav">
+        <a href="./index.html" class="logo-link link header-logo">
+          <span class="logo-text">Web</span>
+          Studio
+        </a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="/studio">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="/contact">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contact-list list">
+          <li class="contact-list-item">
+            <a class="contact-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contact-list-item">
+            <a class="contact-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <!-- Banner -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <!-- Hero -->
+      <section class="hero">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">
           <span class="button-text">Order Service</span>
         </button>
@@ -46,29 +60,29 @@
       <!-- Features -->
       <section>
         <h2 hidden>features</h2>
-        <ul class="features">
-          <li>
+        <ul class="features-list list">
+          <li class="features-list-item">
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <h3 class="features-title">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <h3 class="features-title">Diligence</h3>
             <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <h3 class="features-title">Technologies</h3>
             <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
@@ -80,79 +94,82 @@
 
       <!-- Images about us -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+        <h2 class="page-title">What are we doing</h2>
+        <ul class="images-list list">
+          <li class="images-list-item">
             <img
               src="./images/pc-image.jpg"
               alt="monitor on table"
               width="360"
             />
           </li>
-          <li>
+          <li class="images-list-item">
             <img
               src="./images/apps-image.jpg"
               alt="smartphone apps that levitate towards phone"
               width="360"
             />
           </li>
-          <li>
+          <li class="images-list-item">
             <img src="./images/smartpgone.jpg" alt="smartphone" width="360" />
           </li>
         </ul>
       </section>
 
       <!-- Our team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team-cards">
+        <h2 class="page-title">Our Team</h2>
+        <ul class="team-cards-list list">
           <!-- team card 1 -->
-          <li>
+          <li class="team-cards-list-item">
             <img
               src="./images/team-card1.jpg"
               alt="male with short hair"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-cards-name">Mark Guerrero</h3>
+            <p class="team-cards-text">Product Designer</p>
           </li>
           <!-- team card 2 -->
-          <li>
+          <li class="team-cards-list-item">
             <img
               src="./images/team-card2.jpg"
               alt="male looking left"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-cards-name">Tom Ford</h3>
+            <p class="team-cards-text">Frontend Developer</p>
           </li>
           <!-- team card 3 -->
-          <li>
+          <li class="team-cards-list-item">
             <img
               src="./images/team-card3.jpg"
               alt="female looking forward"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-cards-name">Camila Garcia</h3>
+            <p class="team-cards-text">Marketing</p>
           </li>
           <!-- team card 4 -->
-          <li>
+          <li class="team-cards-list-item">
             <img
               src="./images/team-card4.jpg"
               alt="male looking forward"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-cards-name">Daniel Wilson</h3>
+            <p class="team-cards-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html"><span class="logo">Web</span>Studio</a>
-      <p>
+      <a href="./index.html" class="logo-link link footer-logo">
+        <span class="logo-text">Web</span>
+        Studio
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
