--- a/portfolio.html
+++ b/portfolio.html
@@ -11,87 +11,117 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="/studio">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="/contact">Contacts</a></li>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a href="./index.html" class="logo-link link header-logo">
+          <span class="logo-text">Web</span>
+          Studio
+        </a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="/studio">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="/contact">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contact-list list">
+          <li class="contact-list-item">
+            <a class="contact-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="contact-list-item">
+            <a class="contact-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <h1 hidden>Portfolio</h1>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
+      <section class="Galery">
+        <h1 hidden>Portfolio</h1>
+        <ul class="nav-buttonsnav--list list">
+          <li class="nav-buttons-list-item">
+            <button type="button" class="nav-buttons-form">All</button>
+          </li>
+          <li class="nav-buttons-list-item">
+            <button type="button" class="nav-buttons-form">Web Site</button>
+          </li>
+          <li class="nav-buttons-list-item">
+            <button type="button" class="nav-buttons-form">App</button>
+          </li>
+          <li class="nav-buttons-list-item">
+            <button type="button" class="nav-buttons-form">Design</button>
+          </li>
+          <li class="nav-buttons-list-item">
+            <button type="button" class="nav-buttons-form">Marketing</button>
+          </li>
+        </ul>
 
-      <ul>
-        <li>
-          <img src="./images/galery/galery-item1.jpg" alt="" />
-          <h2>Banking App Interface Concept</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item2.jpg" alt="" />
-          <h2>Cashless Payment</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item3.jpg" alt="" />
-          <h2>Meditation App</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item4.jpg" alt="" />
-          <h2>Taxi Service</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item5.jpg" alt="" />
-          <h2>Screen Illustrations</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item6.jpg" alt="" />
-          <h2>Online Courses</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item7.jpg" alt="" />
-          <h2>Instagram Stories Concept</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item8.jpg" alt="" />
-          <h2>Organic Food</h2>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src="./images/galery/galery-item9.jpg" alt="" />
-          <h2>Fresh Coffee</h2>
-          <p>Web Site</p>
-        </li>
-      </ul>
+        <ul class="galery-list list">
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item1.jpg" alt="" />
+            <h2 class="image-title">Banking App Interface Concept</h2>
+            <p class="image-text">App</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item2.jpg" alt="" />
+            <h2 class="image-title">Cashless Payment</h2>
+            <p class="image-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item3.jpg" alt="" />
+            <h2 class="image-title">Meditation App</h2>
+            <p class="image-text">App</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item4.jpg" alt="" />
+            <h2 class="image-title">Taxi Service</h2>
+            <p class="image-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item5.jpg" alt="" />
+            <h2 class="image-title">Screen Illustrations</h2>
+            <p class="image-text">Design</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item6.jpg" alt="" />
+            <h2 class="image-title">Online Courses</h2>
+            <p class="image-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item7.jpg" alt="" />
+            <h2 class="image-title">Instagram Stories Concept</h2>
+            <p class="image-text">Design</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item8.jpg" alt="" />
+            <h2 class="image-title">Organic Food</h2>
+            <p class="image-text">Web Site</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./images/galery/galery-item9.jpg" alt="" />
+            <h2 class="image-title">Fresh Coffee</h2>
+            <p class="image-text">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-link link footer-logo">
+        <span class="logo-text">Web</span>
+        Studio
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
