--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <main>
       <section class="Galery">
         <h1 hidden>Portfolio</h1>
-        <ul class="nav-buttonsnav--list list">
+        <ul class="nav-buttons-list list">
           <li class="nav-buttons-list-item">
             <button type="button" class="nav-buttons-form">All</button>
           </li>
