--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- Header -->
     <header class="page-header">
       <nav class="page-nav">
-        <a href="./index.html" class="logo-link link header-logo">
-          <span class="logo-text">Web</span>
-          Studio
+        <a href="./index.html" class="logo-link link">
+          Web<span class="header-logo">Studio</span>
         </a>
         <ul class="menu list">
+          <li></li>
           <li class="menu-item">
-            <a class="menu-link link" href="/studio">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="/contact">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="contact-list list">
           <li class="contact-list-item">
             <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -164,10 +164,9 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo-link link footer-logo">
-        <span class="logo-text">Web</span>
-        Studio
+    <footer class="footer">
+      <a href="./index.html" class="logo-link link">
+        Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
