--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -13,23 +15,23 @@
   <body>
     <header class="page-header">
       <nav class="page-nav">
-        <a href="./index.html" class="logo-link link header-logo">
-          <span class="logo-text">Web</span>
-          Studio
+        <a href="./index.html" class="logo-link link">
+          Web<span class="header-logo">Studio</span>
         </a>
         <ul class="menu list">
+          <li></li>
           <li class="menu-item">
-            <a class="menu-link link" href="/studio">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="/contact">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="contact-list list">
           <li class="contact-list-item">
             <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -68,58 +70,84 @@
 
         <ul class="galery-list list">
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item1.jpg" alt="" />
-            <h2 class="image-title">Banking App Interface Concept</h2>
-            <p class="image-text">App</p>
+            <a href="" class="galery-link link">
+              <img src="./images/galery/galery-item1.jpg" alt="bank app" width:
+              360px; height: 300px;/>
+              <h2 class="image-title">Banking App Interface Concept</h2>
+              <p class="image-text">App</p>
+            </a>
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item2.jpg" alt="" />
-            <h2 class="image-title">Cashless Payment</h2>
-            <p class="image-text">Marketing</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item2.jpg" alt="phone scaning QR
+              code"width: 360px; height: 300px; />
+              <h2 class="image-title">Cashless Payment</h2>
+              <p class="image-text">Marketing</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item3.jpg" alt="" />
-            <h2 class="image-title">Meditation App</h2>
-            <p class="image-text">App</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item3.jpg" alt="laptop and
+              smartpohe add"width: 360px; height: 300px; />
+              <h2 class="image-title">Meditation App</h2>
+              <p class="image-text">App</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item4.jpg" alt="" />
-            <h2 class="image-title">Taxi Service</h2>
-            <p class="image-text">Marketing</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item4.jpg" alt="driver in gloves
+              work taxi"width: 360px; height: 300px; />
+              <h2 class="image-title">Taxi Service</h2>
+              <p class="image-text">Marketing</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item5.jpg" alt="" />
-            <h2 class="image-title">Screen Illustrations</h2>
-            <p class="image-text">Design</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item5.jpg" alt="smartphone and
+              pictures"width: 360px; height: 300px; />
+              <h2 class="image-title">Screen Illustrations</h2>
+              <p class="image-text">Design</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item6.jpg" alt="" />
-            <h2 class="image-title">Online Courses</h2>
-            <p class="image-text">Marketing</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item6.jpg" alt="smiling
+              female"width: 360px; height: 300px; />
+              <h2 class="image-title">Online Courses</h2>
+              <p class="image-text">Marketing</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item7.jpg" alt="" />
-            <h2 class="image-title">Instagram Stories Concept</h2>
-            <p class="image-text">Design</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item7.jpg" alt="many portfolio
+              articles"width: 360px; height: 300px; />
+              <h2 class="image-title">Instagram Stories Concept</h2>
+              <p class="image-text">Design</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item8.jpg" alt="" />
-            <h2 class="image-title">Organic Food</h2>
-            <p class="image-text">Web Site</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item8.jpg" alt="women walk after
+              grocery"width: 360px; height: 300px; />
+              <h2 class="image-title">Organic Food</h2>
+              <p class="image-text">Web Site</p></a
+            >
           </li>
           <li class="galery-list-item">
-            <img src="./images/galery/galery-item9.jpg" alt="" />
-            <h2 class="image-title">Fresh Coffee</h2>
-            <p class="image-text">Web Site</p>
+            <a href="" class="galery-link link"
+              ><img src="./images/galery/galery-item9.jpg" alt="barista make
+              capuchino"width: 360px; height: 300px; />
+              <h2 class="image-title">Fresh Coffee</h2>
+              <p class="image-text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo-link link footer-logo">
-        <span class="logo-text">Web</span>
-        Studio
+    <footer class="footer">
+      <a href="./index.html" class="logo-link link">
+        Web<span class="footer-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
