update styles.css and changed portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,72 +71,107 @@
         <ul class="galery-list list">
           <li class="galery-list-item">
             <a href="" class="galery-link link">
-              <img src="./images/galery/galery-item1.jpg" alt="bank app" width:
-              360px; height: 300px;/>
+              <img
+                src="./images/galery/galery-item1.jpg"
+                alt="bank app"
+                width="360"
+              />
               <h2 class="image-title">Banking App Interface Concept</h2>
               <p class="image-text">App</p>
             </a>
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item2.jpg" alt="phone scaning QR
-              code"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item2.jpg"
+                alt="phone scaning QR
+              code"
+                width="360"
+              />
               <h2 class="image-title">Cashless Payment</h2>
               <p class="image-text">Marketing</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item3.jpg" alt="laptop and
-              smartpohe add"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item3.jpg"
+                alt="laptop and
+              smartpohe add"
+                width="360"
+              />
               <h2 class="image-title">Meditation App</h2>
               <p class="image-text">App</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item4.jpg" alt="driver in gloves
-              work taxi"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item4.jpg"
+                alt="driver in gloves
+              work taxi"
+                width="360"
+              />
               <h2 class="image-title">Taxi Service</h2>
               <p class="image-text">Marketing</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item5.jpg" alt="smartphone and
-              pictures"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item5.jpg"
+                alt="smartphone and
+              pictures"
+                width="360"
+              />
               <h2 class="image-title">Screen Illustrations</h2>
               <p class="image-text">Design</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item6.jpg" alt="smiling
-              female"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item6.jpg"
+                alt="smiling
+              female"
+                width="360"
+              />
               <h2 class="image-title">Online Courses</h2>
               <p class="image-text">Marketing</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item7.jpg" alt="many portfolio
-              articles"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item7.jpg"
+                alt="many portfolio
+              articles"
+                width="360"
+              />
               <h2 class="image-title">Instagram Stories Concept</h2>
               <p class="image-text">Design</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item8.jpg" alt="women walk after
-              grocery"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item8.jpg"
+                alt="women walk after
+              grocery"
+                width="360"
+              />
               <h2 class="image-title">Organic Food</h2>
               <p class="image-text">Web Site</p></a
             >
           </li>
           <li class="galery-list-item">
             <a href="" class="galery-link link"
-              ><img src="./images/galery/galery-item9.jpg" alt="barista make
-              capuchino"width: 360px; height: 300px; />
+              ><img
+                src="./images/galery/galery-item9.jpg"
+                alt="barista make
+              capuchino"
+                width="360"
+              />
               <h2 class="image-title">Fresh Coffee</h2>
               <p class="image-text">Web Site</p></a
             >
