--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolia</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,6 @@
           Web<span class="header-logo">Studio</span>
         </a>
         <ul class="menu list">
-          <li></li>
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
           </li>
